# streichzeug

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-MIT  MAC_SETUP.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: konzept-schwaerz-buehne.md
scripts/: download-ner-model.ps1  download-ner-model.sh  gen-app-icon.py  gen-tray-icon.py
src/: App.svelte  MarkerText.svelte  MarkerTextDemo.svelte  Onboarding.svelte  StageImageDemo.svelte  StageView.svelte  StashView.svelte  Widget.svelte  hotkey.ts  main.ts  stage.ts  styles.css
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/models/: .gitignore  README.md
src-tauri/src/: applog.rs  clipboard.rs  detection.rs  foreground.rs  gazetteer.rs  hotkey.rs  imaging.rs  main.rs  ner.rs  ocr.rs  richtext.rs  secrets.rs  settings.rs  stage.rs  storage.rs  tokens.rs  widget.rs
src-tauri/src/clipboard/: macos_impl.rs  windows_impl.rs
src-tauri/tests/fixtures/: npl_email_sample.txt
