[package]
name = "streichzeug"
version = "0.5.1"
description = "Streichzeug — PII-Erkennung und Pseudonymisierung in der Zwischenablage"
edition = "2021"
# 1.80 wegen ammonia 4.x (Stufe-2-HTML-Sanitizing); vorher 1.77.
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dzieciol-dev/streichzeug"
authors = ["Streichzeug Contributors"]
# Verhindert versehentliches `cargo publish` zu crates.io — das Paket ist
# Teil einer Desktop-App, nicht als Bibliothek zur Wiederverwendung gedacht.
publish = false

[[bin]]
name = "streichzeug"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-notification = "2.0"
tauri-plugin-clipboard-manager = "2.0"
# Globaler Hotkey für das Smart-Paste-Feature (Strg+B Default).
tauri-plugin-global-shortcut = "2.0"

# Cross-platform Input-Simulation für das synthetische Strg+V nach Hotkey.
# Nutzt SendInput auf Windows, Quartz Events auf macOS (braucht
# Accessibility-Permissions beim ersten Aufruf).
enigo = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Detection
regex = "1.10"
once_cell = "1.19"
iban_validate = "5"
phonenumber = "0.3"

# Stufe 2 (Schwärz-Bühne): HTML-Clipboard formatiert schwärzen.
# ammonia sanitisiert (Allowlist, Remote-Referenzen raus — No-Outbound),
# kuchikiki liefert den DOM fürs Finding-Mapping auf Textknoten. Beide rein
# lokal, kein Netz-Zugriff.
ammonia = "4"
kuchikiki = "0.8.8-speedreader"
# Gleiche Major-Version wie in kuchikiki — für QualName/LocalName beim
# Erzeugen der Annotations-Spans. NICHT unabhängig bumpen.
html5ever = "0.29"

# Token format
hmac = "0.12"
sha2 = "0.10"
base32 = "0.5"
hex = "0.4"

# Kryptographisch sicherer RNG für den Master-Secret. Klein, audited,
# wrappt das OS-RNG (getrandom on Linux/Mac, BCryptGenRandom on Win).
getrandom = "0.2"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Errors
anyhow = "1"
thiserror = "1"

# Storage. `bundled-sqlcipher-vendored-openssl` linkt SQLite + SQLCipher
# statisch und kompiliert OpenSSL vendored mit — keine System-Abhängigkeit,
# transparente AES-256-Verschlüsselung der DB-Datei. Der DB-Schlüssel wird
# aus dem Master-Secret abgeleitet (siehe `secrets::db_key_hex`). Erstes Build
# dauert durch den OpenSSL-Compile ~5 Minuten länger.
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }

# Cross-platform data-dir resolution. Sowohl Tauri-UI als auch NMH-Child
# müssen denselben Pfad auflösen, damit sie sich die DB teilen.
dirs = "5"

# ------------------------------------------------------------ Layer-3 NER (optional)
#
# Aktivierung via `cargo build --features ner`. Ohne Feature wird der NER-
# Layer als No-Op kompiliert — Binary bleibt schlank, kein ONNX-Runtime-
# Download zur Build-Zeit.
#
# `ort` ist die Rust-Bindung an Microsoft ONNX Runtime. `load-dynamic` lädt
# die ORT-Shared-Library zur Laufzeit (nicht statisch gelinkt) — damit bleibt
# das Bundle klein, der User muss die ORT-Lib aber separat bereitstellen
# (Download-Script in scripts/).
ort = { version = "=2.0.0-rc.10", optional = true, default-features = false, features = ["load-dynamic", "ndarray"] }
tokenizers = { version = "0.20", optional = true, default-features = false, features = ["onig"] }
ndarray = { version = "0.16", optional = true }
# HTTP-Download für Modell + ORT-Library. Wird zur Laufzeit beim ersten
# Aktivieren des NER-Features genutzt — siehe `ner::download_models`.
reqwest = { version = "0.12", optional = true, default-features = false, features = ["rustls-tls", "stream"] }
futures-util = { version = "0.3", optional = true }
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", optional = true }
# Win-only Entpacken der ORT-Runtime aus dem heruntergeladenen .zip.
# Default-Features (deflate, bzip2, …) sind nicht nötig — die MS-Releases
# verwenden Standard-Deflate. Nur der Deflate-Reader, damit keine
# zusätzlichen Native-Deps oder problematischen Lizenzen ins Dep-Tree
# kommen (deny.toml).
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }

# Master-Secret im OS-Keychain (macOS Keychain / Windows Credential Manager)
# statt in einer 0600-Datei. `keyring` v3 mit den nativen Backends. Auf
# Plattformen ohne unterstütztes Backend (bzw. wenn der Keychain zur Laufzeit
# nicht verfügbar ist) fällt `secrets.rs` transparent auf die Datei zurück.
# Platform-specific
[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Threading",       # OpenProcess
    "Win32_System_ProcessStatus",   # GetModuleFileNameExW
    "Win32_UI_WindowsAndMessaging", # GetForegroundWindow, Get/SetWindowLongPtrW (Widget)
    "Win32_UI_Input_KeyboardAndMouse", # GetAsyncKeyState (Modifier-Wait im Capture-Flow)
] }
# Hochsprachiges Clipboard-Read; macht uns die OpenClipboard/CloseClipboard/
# GlobalLock-Dance ab. GetClipboardSequenceNumber polls direkt über windows-rs.
clipboard-win = "5"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSPasteboard", "NSWorkspace", "NSRunningApplication", "NSEvent"] }
objc2-foundation = { version = "0.2", features = ["NSString", "NSArray"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Layer-3 NER (siehe ner.rs). Aktivieren mit `cargo build --features ner`.
# Erfordert zur Laufzeit:
#   1) Modell + Tokenizer-Files in `$EXE_DIR/models/` (Download-Script unten)
#   2) ONNX-Runtime-Shared-Library im PATH (auch via Script bezogen)
ner = [
    "dep:ort",
    "dep:tokenizers",
    "dep:ndarray",
    "dep:reqwest",
    "dep:futures-util",
    "dep:flate2",
    "dep:tar",
    "dep:zip",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
# `panic = "unwind"` statt "abort" — auch wenn das ~50 KB Binary kostet.
# Grund: ORT-FFI (`onnxruntime.dll`) wirft bei Init-Fehlern manchmal
# Rust-Panics statt Result::Err. Mit "abort" killt das die ganze App
# (Exception 0xc0000409). Mit "unwind" können wir die Panics in
# catch_unwind fangen und L3 graceful auf no-op runterstufen.
panic = "unwind"
